--- a/project 4/index.html
+++ b/project 4/index.html
@@ -4,15 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
-    <link href="/dist/output.css" rel="stylesheet">
+    <title>Landing Page</title>   
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <section>
-        <header>
-            
-        </header>
-    </section>
+  <div class="box">
+    <div class="block1">
+      <header>
+        <div class="nav1">
+          <h1>Blogr</h1>
+          <div id="nav1">       
+            <a href="#">Product</a>
+            <a href="#">Company</a>
+            <a href="#">Connect</a>        
+          </div>
+        </div>      
+        <div class="btn">
+          <button id="btn1">Login</button>
+          <button id="btn2">Signup</button>
+        </div>              
+      </header>
+      <div id="block1">
+        <h1>A modern publishing platform</h1>
+        <p>Grow your audience and build your online brand</p>
+        <div id="btn">
+          <button class="btn1">Start for free</button>
+          <button class="btn2">Learn More</button>
+        </div>      
+      </div>
+    </div>
+    <div class="block2">
+      <h1>Designed for the future</h1>
+      <div id="sec1">
+        <h2>Introducing an extensible editor</h2>
+        <p>
+          Blogr features an exceedingly intuitive interface which lets you focus on the one thing: creating content. The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, videos and markdown. Extensibility with plugiins and themes provide easy ways to add functionality or change the looks of a blog.
+        </p>      
+      </div>
+      <div id="sec2">
+        <h2>Robust content management</h2>
+        <p>
+          Flexible content management enables users to easily move through posts. Increase the usability of your blog by adding customized categories, sections, format, or flow. With this functionality, you're in full control.
+        </p>
+      </div>
+    </div>
+  </div>
+  
+          
+ 
 </body>
 </html>
