--- a/project 4/index.html
+++ b/project 4/index.html
@@ -4,53 +4,106 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>   
+    <title>Landing page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="box">
-    <div class="block1">
-      <header>
-        <div class="nav1">
-          <h1>Blogr</h1>
-          <div id="nav1">       
-            <a href="#">Product</a>
-            <a href="#">Company</a>
-            <a href="#">Connect</a>        
+    <div class="box">
+        <div class="block1">
+            <header>
+              <div class="nav1">
+                <h1>Blogr</h1>
+                <div id="nav1">       
+                  <a href="#">Product</a>
+                  <a href="#">Company</a>
+                  <a href="#">Connect</a>        
+                </div>
+              </div>      
+              <div class="btn">
+                <button id="btn1">Login</button>
+                <button id="btn2">Signup</button>
+              </div>              
+            </header>
+            <div id="block1">
+              <h1>A modern publishing platform</h1>
+              <p>Grow your audience and build your online brand</p>
+              <div id="btn">
+                <button class="btn1">Start for free</button>
+                <button class="btn2">Learn More</button>
+              </div>      
+            </div>
           </div>
-        </div>      
-        <div class="btn">
-          <button id="btn1">Login</button>
-          <button id="btn2">Signup</button>
-        </div>              
-      </header>
-      <div id="block1">
-        <h1>A modern publishing platform</h1>
-        <p>Grow your audience and build your online brand</p>
-        <div id="btn">
-          <button class="btn1">Start for free</button>
-          <button class="btn2">Learn More</button>
-        </div>      
-      </div>
-    </div>
-    <div class="block2">
-      <h1>Designed for the future</h1>
-      <div id="sec1">
-        <h2>Introducing an extensible editor</h2>
-        <p>
-          Blogr features an exceedingly intuitive interface which lets you focus on the one thing: creating content. The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, videos and markdown. Extensibility with plugiins and themes provide easy ways to add functionality or change the looks of a blog.
-        </p>      
-      </div>
-      <div id="sec2">
-        <h2>Robust content management</h2>
-        <p>
-          Flexible content management enables users to easily move through posts. Increase the usability of your blog by adding customized categories, sections, format, or flow. With this functionality, you're in full control.
-        </p>
-      </div>
-    </div>
-  </div>
-  
+          <div class="block2">
+            <h1>Designed for the future</h1>
+            <div id="sec1">
+              <h2>Introducing an extensible editor</h2>
+              <p> 
+                Blogr features an exceedingly intuitive interface which lets you focus on the one thing: creating content. The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, videos and markdown. Extensibility with plugiins and themes provide easy ways to add functionality or change the looks of a blog.
+              </p>      
+            </div>
+            <div id="sec2">
+              <h2>Robust content management</h2>
+              <p>
+                Flexible content management enables users to easily move through posts. Increase the usability of your blog by adding customized categories, sections, format, or flow. With this functionality, you're in full control.
+              </p>
+            </div>
+          </div>
           
- 
+          <div class="block3"> 
+            <div id="step1">
+                <img src="images/illustration-phones.svg">                
+                <div id="sec3">                          
+                  <h1>State of the Art Infrastructure</h1>
+                    <p>
+                      With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
+                    </p>
+                </div>
+            </div>            
+          </div>
+          <div class="block4">
+            <div id="sec4">
+              <h2>Free, open, simple</h2>
+              <p>
+                Blogr is a free and open source application backed by a large community of helpful developers. It supports features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, and works seamlessly with Google Analytics. the architecture is clean and is relatively easy to learn.
+              </p>
+            </div>
+            <div id="sec5">
+              <h2>Powerful tooling</h2>
+              <p>
+                Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but capable of producing even the most complicated sites.
+              </p>
+            </div>
+          </div>
+
+          <footer class="block5">
+            <h1>Blogr</h1>
+              <div id="sec6">
+                <h3>Product</h3>
+                <div id="stage1">
+                  <a href="#">Overview</a>
+                  <a href="#">Pricing</a>
+                  <a href="#">Marketplace</a>
+                  <a href="#">Features</a>
+                  <a href="#">Integrations</a>
+                </div>
+              </div>
+              <div id="sec7">
+                <h3>Company</h3>
+                <div id="stage2">
+                  <a href="#">About</a>
+                  <a href="#">Team</a>
+                  <a href="#">Blog</a>              
+                </div>
+              </div>
+              <div id="sec8">
+                <h3>Connect</h3>
+                <div id="stage3">
+                  <a href="#">Contact</a>
+                  <a href="#">Newsletter</a>
+                  <a href="#">LinkedIn</a>              
+                </div>
+              </div>       
+          </footer>          
+    </div>    
 </body>
 </html>
