--- a/Excersices Javascript/Lead Tracker/index2.html
+++ b/Excersices Javascript/Lead Tracker/index2.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="font-sans text-xs h-screen p-0 m-3 bg-gradient-to-r from-violet-500 to-sky-500 to-pink-500 to-fuchsia-500">
-    <input type="text" class="input-el w-full min-w-fit h-8 px-4 border border-2 border-green-400 rounded-lg">
+    <input type="text" class="input-el w-full h-8 px-4 border border-2 border-green-400 rounded-lg">
     <button type="button" class="input-btn border border-none h-8 w-1/4 mt-2 text-lg shadow bg-white font-medium bg-green-400 rounded">SAVE INPUT</button>
     <ul class="ul-el mt-3 ml-6 text-lg underline underline-offset-1 text-green-400">
         
