--- a/Excersices Javascript/Lead Tracker/index2.html
+++ b/Excersices Javascript/Lead Tracker/index2.html
@@ -9,7 +9,24 @@
 </head>
 <body class="font-sans text-xs h-screen p-0 m-3 bg-gradient-to-r from-violet-500 to-sky-500 to-pink-500 to-fuchsia-500">
     <input type="text" class="input-el w-full h-8 px-4 border border-2 border-green-400 rounded-lg">
-    <button type="button" class="input-btn border border-none h-8 w-1/4 mt-2 text-lg shadow bg-white font-medium bg-green-400 rounded">SAVE INPUT</button>
+    <button 
+        type="button"
+        data-mdb-ripple="true"
+        data-mdb-ripple-color="light"
+        class="input-btn border border-none h-8 w-1/4 mt-2 text-lg shadow bg-white font-medium bg-green-400 rounded hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-300 ease-in-out">SAVE INPUT
+    </button>
+    <button 
+        type="button"
+        data-mdb-ripple="true"
+        data-mdb-ripple-color="light"
+        class="save-btn border border-none h-8 w-1/4 mt-2 text-lg shadow bg-white font-medium bg-green-400 rounded hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-300 ease-in-out">SAVE TAB
+    </button>
+    <button 
+        type="button"
+        data-mdb-ripple="true"
+        data-mdb-ripple-color="light"
+        class="delete-btn border border-green-400 h-8 w-1/4 mt-2 text-lg text-green-400 shadow bg-white  font-medium  rounded hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">DELETE ALL
+    </button>
     <ul class="ul-el mt-3 ml-6 text-lg underline underline-offset-1 text-green-400">
         
     </ul>
