--- a/project 5/index.html
+++ b/project 5/index.html
@@ -19,7 +19,7 @@
         type="button"
         data-mdb-ripple="true"
         data-mdb-ripple-color="light"
-        class="check-btn border w-36 h-2/9 py-2 font-medium text-base bg-sky-400 hover:bg-sky-700 hover:shadow-lg focus:bg-sky-700 focus:shadow-lg focus:outline-none focus:ring-1 active:bg-sky-800 active:shadow-lg transition duration-200 ease-in-out">
+        class="check-btn border w-36 h-2/9 py-2 mt-2 font-medium text-base bg-sky-400 hover:bg-sky-700 hover:shadow-lg focus:bg-sky-700 focus:shadow-lg focus:outline-none focus:ring-1 active:bg-sky-800 active:shadow-lg transition duration-200 ease-in active:scale-50">
         Check Order
         <i class="fa-solid fa-paper-plane"></i>
     </button> 
